* Version 1.4

## Major Features
* Polygons no longer have a per-polygon max vertex count. There is now only a maximum total vertex count for the entire level.
* Steam elma.res is supported

## Minor Features
* Improve picture loading speed by allocating all needed memory at once instead of allocating in blocks of 64 KB (DOS-era restriction)
* Error messages and menu warnings are now vertically centered on the screen
* Intro scrolling animation will always take 1.15 seconds, regardless of screen resolution
* Intro scrolling animation is now skippable by pressing Enter or Esc, instead of being an eolconf setting
* Background menu balls start off centered in the screen
* Palette is processed as a 24-bit color instead of an 18-bit color, slightly improving color accuracy
* Maximum number of displayed levels/recs in menu increased from 29 to up to 200 for high resolutions
* Dialog pop-ups are centered on the screen
* message.inf is no longer required to view error messages, and error messages are now all in English
* turntime can now be configured

## Minor Bug Fixes
* Foreground grass was accidentally inefficiently calculated, causing increased load time
* Internal editor's Save As dialog box could cause buffer overflows
* Internal editor's Save As would sometimes overwrite old files without giving a warning
* Level description in internal editor is properly centered
* Internal editor marks a level as changed if the case of the level description is changed
* Pictures named "aaccbbdd" could prevent internal editor tooltip from properly updating
* Show dialog if state.dat is inaccessible when updating top10 in an internal or merging state.dat
* Background menu balls would sometimes vanish on the "Please do not distribute" screen
* Improve some slightly buggy/inconsistent mouse click behaviour in internal editor
* Red helmet animation will no longer skip frames after the intro scrolling animation