@@ -4,6 +4,9 @@
 * Polygons no longer have a per-polygon max vertex count. There is now only a maximum total vertex count for the entire level.
 * Steam elma.res is supported
 
+## Major Bug Fixes
+* It is possible to properly collect more than 200 apples in a single frame
+
 ## Minor Features
 * Improve picture loading speed by allocating all needed memory at once instead of allocating in blocks of 64 KB (DOS-era restriction)
 * Error messages and menu warnings are now vertically centered on the screen
